# bigartm

./: .gitignore  .travis.yml  .travis_old.yml  CMakeLists.txt  LICENSE  LICENSE.txt  MANIFEST.in  README.md  appveyor-mingw.yml  appveyor.yml  build.bat  build_all.bat  codestyle_checks.sh  collection_parser.cc  hello_big_artm.cc  setup.cfg  setup.py
python/: CMakeLists.txt  gen_proto.py  setup.py  setup.py.in  setup_data.py
python/artm/: __init__.py  artm_model.py  batches.py  batches_utils.py  dictionary.py  hierarchy_utils.py  lda_model.py  library.py  master_component.py  messages_pb2.py  model.py  regularizers.py  score_tracker.py  scores.py  scores_info.py
python/artm/utility/: create_cooc_data.py  gen_constants.py
python/artm/wrapper/: __init__.py  api.py  constants.py  exceptions.py  messages_pb2.py  spec.py  utils.py
python/examples/: download_datasets.sh  example03_concurrency.py  example06_use_dictionaries.py  example08_network_modus_operandi.py  example13_overwrite_topic_model.py  example14_initialize_topic_model.py  example15_import_export_topic_model.py  example17_process_batches.py  example18_merge_model.py  example19_regularize_model.py  run_all.sh
python/experiments/: experiment02_artm.py
python/experiments/benchmarks/: example_run.py
python/tests/: CMakeLists.txt
python/tests/artm/: CMakeLists.txt  test_artm_model.py  test_batches_utils.py  test_dictionary.py  test_dump_load.py  test_general.py  test_hartm.py  test_lda_model.py  test_regularizer_biterms.py  test_regularizer_decorrelator.py  test_regularizer_net_plsa.py  test_regularizer_smooth_sparse_theta.py  test_regularizer_topic_segmentation.py  test_regularizer_topic_selection.py  test_t_artm.py  test_time_regularizers.py  test_topic_seg.py
python/tests/cli/: helper.py  test_01_canary.py
python/tests/wrapper/: CMakeLists.txt  download_datasets.sh  helpers.py  test_01_synthetic_collection.py  test_02_regularizers.py  test_03_concurrency.py  test_04_dictionary.py  test_05_multimodal.py  test_06_get_theta.py  test_07_initialize_and_get_phi.py  test_08_import_export_model.py  test_09_online_algorithm.py  test_10_attach_model.py  test_11_master_model_api.py  test_12_version.py  vocab.kos.txt
src/: CMakeLists.txt  README.TXT  artm_vs2012.sln
src/artm/: CMakeLists.txt  c_interface.cc  c_interface.h  cpp_interface.cc  cpp_interface.h  messages.pb.cc  messages.pb.h  messages.proto  regularizer_interface.cc  regularizer_interface.h  score_calculator_interface.cc  score_calculator_interface.h  version.h  version.h.in  version.rc.in
src/artm/cmake/: artm-config.cmake
src/artm/core/: batch_manager.cc  batch_manager.h  cache_manager.cc  cache_manager.h  call_on_destruction.h  check_messages.h  collection_parser.cc  collection_parser.h  common.h  cooccurrence_collector.cc  cooccurrence_collector.h  cooccurrence_dictionary.cc  cooccurrence_dictionary.h  cuckoo_watch.cc  cuckoo_watch.h  data_loader.cc  data_loader.h  dense_phi_matrix.cc  dense_phi_matrix.h  dictionary.cc  dictionary.h  dictionary_operations.cc  dictionary_operations.h  exceptions.h  fileread_helpers.h  generation.cc  generation.h  helpers.cc  helpers.h  instance.cc  instance.h  instance_schema.cc  instance_schema.h  internals.pb.cc  internals.pb.h  internals.proto  internals.rpcz.cc  internals.rpcz.h  master_component.cc  master_component.h  (+44 more)
src/artm/regularizer/: README.txt  biterms_phi.cc  biterms_phi.h  decorrelator_phi.cc  decorrelator_phi.h  hierarchy_sparsing_theta.cc  hierarchy_sparsing_theta.h  improve_coherence_phi.cc  improve_coherence_phi.h  improve_coherency_phi.cc  improve_coherency_phi.h  itopic_theta.cc  itopic_theta.h  label_regularization_phi.cc  label_regularization_phi.h  multilanguage_phi.cc  multilanguage_phi.h  net_plsa_phi.cc  net_plsa_phi.h  smooth_ptdw.cc  smooth_ptdw.h  smooth_sparse_phi.cc  smooth_sparse_phi.h  smooth_sparse_theta.cc  smooth_sparse_theta.h  smooth_time_in_topics_phi.cc  smooth_time_in_topics_phi.h  specified_sparse_phi.cc  specified_sparse_phi.h  topic_segmentation_ptdw.cc  topic_segmentation_ptdw.h  topic_selection_theta.cc  topic_selection_theta.h
src/artm/regularizer_sandbox/: decorrelator_phi.cc  decorrelator_phi.h  dirichlet_phi.cc  dirichlet_phi.h  dirichlet_theta.cc  dirichlet_theta.h  improve_coherency_phi.cc  improve_coherency_phi.h  label_regularization_phi.cc  label_regularization_phi.h  multilanguage_phi.cc  multilanguage_phi.h  smooth_sparse_phi.cc  smooth_sparse_phi.h  smooth_sparse_theta.cc  smooth_sparse_theta.h  specified_sparse_phi.cc  specified_sparse_phi.h
src/artm/score/: README.txt  background_tokens_part.cc  background_tokens_part.h  background_tokens_ratio.cc  background_tokens_ratio.h  class_precision.cc  class_precision.h  coherence_plugin.cc  coherence_plugin.h  coherency_plugin.cc  coherency_plugin.h  items_processed.cc  items_processed.h  peak_memory.cc  peak_memory.h  perplexity.cc  (+13 more)
src/artm_tests/: CMakeLists.txt  api.cc  api.h  batch_manager_test.cc  blas_test.cc  boost_thread_test.cc  cache_manager_test.cc  collection_parser_test.cc  cpp_interface_test.cc  instance_test.cc  master_model_test.cc  multiple_classes_test.cc  nodes_connectivity_test.cc  regularizers_test.cc  repeatable_result_test.cc  rpcz_canary_service.pb.cc  rpcz_canary_service.pb.h  rpcz_canary_service.proto  rpcz_canary_service.rpcz.cc  rpcz_canary_service.rpcz.h  rpcz_canary_test.cc  scores_test.cc  serialize_test.cc  serializer_test.cc  supcry_test.cc  template_manager_test.cc  test_mother.cc  test_mother.h  thread_safe_holder_test.cc  topic_model_test.cc  topic_seg_test.cc  transactions_test.cc
src/bigartm/: CMakeLists.txt  cooccurrence_dictionary.cc  cooccurrence_dictionary.h  srcmain.cc
src/cpp_client/: CMakeLists.txt  srcmain.cc
src/node_controller/: CMakeLists.txt  node_controller.cc
src/python/: artm_vs2012.sln
src/python_client/: Makefile  artm_example.py  python_client.py
src/python_interface/: messages_pb2.py  python_interface.py
src/python_tests/: Makefile  tests.py
src/vsprojects/: python_client.pyproj  python_interface.pyproj  python_tests.pyproj
(+214 files in other folders)
